<resources>
    <string name="app_name">Court Counter</string>
    <string name="resetCounter">Counter has been reset successfully</string>

    <string name="teamA_name">Team A</string>
    <string name="teamA_score">0</string>
    <string name="teamA_points3">+3 Points</string>
    <string name="teamA_points2">+2 Points</string>
    <string name="teamA_freeThrow">Free Throw</string>

    <string name="teamB_name">Team B</string>
    <string name="teamB_score">0</string>
    <string name="teamB_points3">+3 Points</string>
    <string name="teamB_points2">+2 Points</string>
    <string name="teamB_freeThrow">Free Throw</string>


    <string name="reset">Reset</string>


</resources>
